save project update so far